2004-01-10  Adam Fedor  <fedor@gnu.org>

	* orderFront fixes
	* Source/NSWindow.m (-orderFront:): Remove NSApp isActive
	check.
	(-orderFrontRegardless): Update for special case (otherWin=-1)
	(-orderWindow:relativeTo:): Pass -1 for otherWin to backend
	if we're the current app.

	* Source/GSDisplayServer.m: Update documentations.

	* Source/NSApplication.m (-changeWindowsItem:title:filename:): Revert
	patch from 2003-10-20.

2004-01-10 16:36  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSScrollView.m (-drawRect:): Indentation fixes after last
	patch.

2004-01-09 Serg Stoyan <stoyan@on.com.ua>

	* Source/NSBrowser.m: 
	(drawRect:) Cosmetic changes in drawing of column separators 
	and horizontal scroller border.
	
	* Source/NSScrollView.m:
	(drawRect): Calculate separator line usning scoller frame. Remove 
	header view counting cases.
	
	* Source/NSScroller.m:
	(drawKnobSlot): Always draw background. Even if there's no room 
	for scroller parts.

2004-01-08 23:26  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSBitmapImageRep+GIF.m: Re-#define Object across the
	include of gif_lib.h . (Reported by Stefan Kleine Stegemann.)

2004-01-08 19:41  Alexander Malmberg <alexander@malmberg.org>

	* configure.ac: Add a check for libungif.
	* configure, Headers/Additions/GNUstepGUI/config.h.in: Regenerate.

	* Source/GNUmakefile: Add NSBitmapImageRep+GIF.m.

	* Source/NSBitmapImageRep+GIF.m, Source/NSBitmapImageRep+GIF.h:
	New files with the GIF image loader.

	* Source/NSBitmapImageRep.m (+canInitWithData:)	Check if the GIF
	loader can handle the data.
	(+imageUnfilteredFileTypes): Add ".gif".
	(+imageRepsWithData:, -initWithData:): Use the GIF loader to load
	GIF images.

2004-01-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSActionCell.m (-initWithCoder:) Don't decode the control
	view, as this may be a Gorm placeholder or otherwise invalid.
	* Source/GSDisplayServer.m:
	(-discardEventsMatchingMask:beforeEvent:),